update tmux status-right

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -99,7 +99,7 @@ set -g window-status-format "#[bg=black,fg=colour11,nobold] #I:#W "
 set -g window-status-current-format "#[bg=colour14,fg=colour8,nobold] #I:#W(☀) "
 
 # status right
-set -g status-right '#[default]#[fg=colour8,bg=colour6,nobold] %A %F %H:%M:%S #[default]' # %H:%M
+set -g status-right '#[default]#[fg=colour8,bg=colour6,nobold] %A %F #[default]' # %A %F %H:%M:%S #[default]
 
 
 
