Home: .zshrc - Agregando el PATH para grunt.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -84,6 +84,9 @@ set-window-option -g window-status-current-attr bright
 
 # statusline
 
+# colors
+# spectrum_ls from zsh
+# spectrum_bls from zsh
 
 
 # status left
@@ -96,10 +99,10 @@ set -g window-status-format "#[bg=black,fg=colour11,nobold] #I:#W "
 # status current
 # 14 -> verde
 # 8 -> plomo
-set -g window-status-current-format "#[bg=colour14,fg=colour8,nobold] #I:#W(☀) "
+set -g window-status-current-format "#[bg=colour166,fg=colour233,nobold] #I:#W(☀) "
 
 # status right
-set -g status-right '#[default]#[fg=colour8,bg=colour6,nobold] %A %F #[default]' # %A %F %H:%M:%S #[default]
+set -g status-right '#[default]#[bg=colour159,fg=colour233,nobold] %A %F #[default]' # %A %F %H:%M:%S #[default]
 
 
 
